fix whitespace

--- a/stockwebsite/src/App.css
+++ b/stockwebsite/src/App.css
@@ -15,6 +15,7 @@
   font-size: calc(10px + 2vmin);
   min-width: 500px;
   min-height: 500px;
+  padding-bottom: 20px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
